# ComfyUI-WanResolutions

./: README.md  __init__.py  pyproject.toml  wan_resolution.py  wanresolutions.py
js/: wan_resolution.js  wanresolutions.js
js/.ipynb_checkpoints/: wan_resolution-checkpoint.js
